file name cleanups, notebook notations

--- a/notebooks/billboard_dataset.ipynb
+++ b/notebooks/billboard_dataset.ipynb
@@ -1,6 +1,24 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "a8628f3e-8073-4c17-b4a7-22d401257d81",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "# 📊 Fetch Billboard Hot-100 Data "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "76ffdbf5-a0ba-4414-bd54-d95decf9e05e",
+   "metadata": {},
+   "source": [
+    "This notebook explores the [billboard library](https://github.com/guoguo12/billboard-charts) and saves all hot-100 weekly charts from 2024 into an excel dataset."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "8c24a177-bd02-45f8-8b9f-89dd90af8717",
@@ -11,6 +29,14 @@
    "source": [
     "import billboard\n",
     "import datetime"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "52113c1a-e065-4592-a539-61bfe6247b78",
+   "metadata": {},
+   "source": [
+    "## Exploring the library"
    ]
   },
   {
@@ -355,6 +381,14 @@
    ],
    "source": [
     "charts[0].date"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b66483fa-d3bb-4150-b975-8ecb0c34c62a",
+   "metadata": {},
+   "source": [
+    "## Exporting 2024 data to excel via pandas"
    ]
   },
   {
@@ -711,7 +745,7 @@
    "source": [
     "# Save to Excel\n",
     "df.to_excel(\n",
-    "    \"bilboard_dataset_2024.xlsx\",     # output file path (use “.xls” or “.xlsx”)\n",
+    "    \"../data/raw/billboard/billboard_dataset_2024.xlsx\",     # output file path (use “.xls” or “.xlsx”)\n",
     "    sheet_name=\"2024\",# optional: name of the worksheet\n",
     "    index=False         # don’t write row indices into the file\n",
     ")\n"
